font clipping fixed

--- a/meal-ui/src/styles/local/mixins/_text-mixins.scss
+++ b/meal-ui/src/styles/local/mixins/_text-mixins.scss
@@ -13,6 +13,7 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+	line-height: 1rem;
 }
 
 @mixin page-heading {
@@ -20,11 +21,13 @@
 	margin-top: $spacing-06;
 	margin-bottom: $spacing-06;
 	font-size: 2.4rem;
+	line-height: 2.4rem;
 }
 
 @mixin logo-title {
 	color: var(--text);
 	font-size: 0.9em;
+	line-height: 0.9rem;
 	text-transform: uppercase;
 }
 
